[package]
name = "aimp"
version = "0.1.0"
authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "iaimp",
    "iaimp/tests/check_dll_export"
]

[dependencies]
iaimp = { path = "iaimp" }
winapi = { version = "0.3.8", features = ["winuser"] }
impls = "1.0.3"
futures = "0.3.5"
paste = "0.1.18"
