[package]
name = "aimp"
version = "0.1.0"
authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "iaimp",
    "cargo-aimp",
    "aimp-derive",
]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
iaimp = { path = "iaimp" }
aimp-derive = { path = "aimp-derive" }
thiserror = "1.0.20"
parking_lot = "0.11.0"
winapi = { version = "0.3.8", features = ["winuser"] }
impls = "1.0.3"
futures = "0.3.5"
paste = "0.1.18"
http = "0.2.1"
dashmap = "3.11.7"
tester = "0.7.0"

[features]
__testing = []

[profile.release]
codegen-units = 1
opt-level = "z"
