[package]
name = "cargo-aimp"
version = "0.1.0"
authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>"]
edition = "2018"

[dependencies]
cargo_metadata = "0.11.1"
anyhow = "1.0.32"
thiserror = "1.0.20"
structopt = "0.3.15"
zip = "0.5.6"
winapi = { version = "0.3.9", features = ["tlhelp32", "processthreadsapi", "synchapi"] }
